--- a/styles/base.css
+++ b/styles/base.css
@@ -306,17 +306,17 @@ text.shadow {
   margin-left: 4px;
 }
 
+.directional-controls {
+  padding: 0px;
+  list-style-type: none;
+  width: 60px;
+  margin: 10px auto;
+}
+
 .directional-controls div {
   background-color: #ececec;
   width: 25px;
   height: 25px;
-}
-
-.directional-controls {
-  margin: 0px;
-  list-style-type: none;
-  width: 60px;
-  margin: 10px auto;
 }
 
 .directional-controls i {
@@ -358,6 +358,23 @@ text.shadow {
 .presets {
   top: auto !important;
   bottom: 100%;
+}
+
+/* task */
+
+.task {
+  margin: -2px auto;
+  width: 500px;
+  background-color: rgba(255,255,255,0.5);
+  padding: 10px;
+  border-radius: 3px;
+  color: #3498db;
+  font-weight: bold;
+  font-family: Helvetica;
+  
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+  -moz-box-shadow:    0 1px 2px rgba(0,0,0,0.07);
+  box-shadow:         0 1px 2px rgba(0,0,0,0.07);
 }
 
 /* kill me */
