--- a/gadget.css
+++ b/gadget.css
@@ -415,34 +415,28 @@ text.emptyMsg {
   border-right: 1px solid #f2f2f2;
 }
 
+/* samples */
+
 .samples {
   top: auto !important;
   bottom: 100%;
-}
-
-/* task */
-
-.task {
-  margin: -2px auto;
-  width: 600px;
-  text-align: center;
-  background-color: rgba(255,255,255,0.5);
   padding: 10px;
-  border-radius: 3px;
-  color: #3498db;
-  font-weight: bold;
-  font-family: Helvetica;
-
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
-  -moz-box-shadow:    0 1px 2px rgba(0,0,0,0.07);
-  box-shadow:         0 1px 2px rgba(0,0,0,0.07);
 }
-
 
 .samples-dropdown {
   position: absolute;
   left: 10px;
   top: 5px;
+  font-family: "Helvetica", sans-serif
+}
+
+.sample {
+  margin-left: 5px;
+}
+
+.sample:hover {
+  background-color: #eee;
+  cursor: pointer;
 }
 
 .samples-button {
@@ -469,7 +463,29 @@ text.emptyMsg {
   background-color: #9E9E9E;
 }
 
+.samples-label {
+  font-weight: bold;
+}
 
+
+
+/* task */
+
+.task {
+  margin: -2px auto;
+  width: 600px;
+  text-align: center;
+  background-color: rgba(255,255,255,0.5);
+  padding: 10px;
+  border-radius: 3px;
+  color: #3498db;
+  font-weight: bold;
+  font-family: Helvetica;
+
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+  -moz-box-shadow:    0 1px 2px rgba(0,0,0,0.07);
+  box-shadow:         0 1px 2px rgba(0,0,0,0.07);
+}
 
 
 
