--- a/gadget.css
+++ b/gadget.css
@@ -75,10 +75,17 @@ text.emptyMsg {
 
 .cypherGadget {
   width: 725px;
-  background-color: #e7e9eb;
-  border-radius: 2px;
+  background-color: #FCFCFC;
   position: relative;
   overflow: hidden;
+  font-family: 'AvenirNextLTPro-Regular', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.not-task {
+  border: 1px solid #e7e7e7;
 }
 
 .visualization {
@@ -88,64 +95,60 @@ text.emptyMsg {
 
 .error-container {
   position: absolute;
-  bottom: 142px;
+  bottom: 185px;
   left: 10px;
-  background-color: rgb(255, 229, 229);
+  background-color: #FB6B58;
   border-radius: 3px;
-  width: 706px;
-  color: red;
+  width: 700px;
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
 }
 
 .error-msg {
   padding: 3px;
-  color: red;
-  font-weight: bold;
   max-width: 670px;
 }
 
 .error-dismiss {
   position: absolute;
   right: 5px;
-  top: 5px;
+  top: 1px;
   cursor: pointer;
 }
 
 
 /* table */
 
-.query-echo {
-  color: #525864;
-  font-family: "Menlo","Courier New","Terminal",monospace;
-  font-size: 12px;
-}
-
 .query-table {
   position: absolute;
-  top: 30px;
-  right: 10px;
-  font-family: "Helvetica", sans-serif;
+  top: 0px;
+  right: 0px;
   line-height: 16px;
+  border-left: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
 }
 
 .table-container {
-  max-height: 350px;
+  max-height: 363px;
   overflow-y: auto;
-  max-width: 355px;
+  max-width: 375px;
+  position: relative;
 }
 
 .query-table table {
-  background-color: rgba(255,255,255,0.8);
+  background-color: rgba(255,255,255,0.95);
 }
 
 .query-table tr {
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #ddd;
   vertical-align: top;
 }
 
 .query-table td {
   min-width: 100px;
   font-size: 12px;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #ddd;
   padding: 3px 2px;
   max-width: 110px;
   overflow: auto;
@@ -162,8 +165,8 @@ text.emptyMsg {
   line-height: 16px;
 }
 
-.query-table td:not(:last-child) {
-  border-right: 1px solid #eee;
+.query-table td:not(:last-child):not(:first-child) {
+  border-right: 1px solid #ddd;
 }
 
 .node-title {
@@ -175,29 +178,28 @@ text.emptyMsg {
 }
 
 .header {
-  background-color: #525864 !important;
-  color: white;
+  background-color: #E6E6E6 !important;
   text-align: center;
+}
+
+.header td {
+  padding: 5px 0px;
 }
 
 .table-node {
   float: left;
-  width: 10px;
-  height: 10px;
-  line-height: 10px;
+  width: 8px;
+  height: 8px;
   color: #fff;
   background-color: #525864;
-  text-align: center;
-  font-size: 10px;
   -webkit-border-radius: 50%;
   border-radius: 50%;
   border: 2px solid #fff;
+  margin-top: 2px;
 }
 
 .table-relationship {
-  display: inline-block;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+  color: #e74c3c;
 }
 
 .node-properties ul {
@@ -214,73 +216,36 @@ text.emptyMsg {
 
 .expand-properties {
   float: left;
-  font-size: 16px;
-  margin: 0px 2px;
-  color: #A2A2A2;
+  font-size: 12px;
+  margin: 2px 5px;
   cursor: pointer;
+}
+
+.expand-properties.icon-caret-down {
+  margin: 2px 2px;
 }
 
 .dismiss {
   position: absolute;
-  bottom: -20px;
+  top: 4px;
   right: 0px;
-
-  text-transform: uppercase;
-  background-color: #C2C2C2;
-  text-shadow: 0 1px 1px rgba(0,0,0,0.15);
-  font-size: 12px;
-  border-radius: 3px;
   padding: 2px 4px;
-  font-weight: bold;
-  line-height: 14px;
-  color: #ffffff;
-  vertical-align: baseline;
-  border: none;
+  font-size: 12px;
+  cursor: pointer;
+  padding-left: 8px;
+  background-color: #E6E6E6;
 }
 
-.dismiss:hover {
-  background-color: #9E9E9E;
+.table-hidden {
+  padding: 3px;
+  cursor: pointer;
 }
+
 
 /* input */
 
 .input {
   position: relative;
-}
-
-.input-subcontrols {
-  position: relative;
-}
-
-.execute {
-  position: absolute;
-  bottom: 78px;
-  right: 25px;
-}
-
-.empty {
-  text-transform: uppercase;
-  background-color: #3498db;
-  text-shadow: 0 1px 1px rgba(0,0,0,0.15);
-  font-size: 12px;
-  border-radius: 3px;
-  padding: 2px 4px;
-  font-weight: bold;
-  line-height: 14px;
-  color: #ffffff;
-  vertical-align: baseline;
-  border: none;
-
-  position: relative;
-  left: 635px;
-}
-
-.empty:hover {
-  background-color: #2F8ECE;
-}
-
-.empty:active {
-  background-color: #2978AD;
 }
 
 .input-prompt {
@@ -293,98 +258,47 @@ text.emptyMsg {
 
 .input-field {
   position: relative;
-  width: 705px;
-  margin: 10px 10px 0px 10px;
+  width: 100%;
   background-color: #fff;
-  color: #525864;
-  font-family: "Menlo","Courier New","Terminal",monospace;
+  color: #000;
   font-size: 13px;
   line-height: 23px;
-
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
-  -moz-box-shadow:    0 1px 2px rgba(0,0,0,0.07);
-  box-shadow:         0 1px 2px rgba(0,0,0,0.07);
-
-  -webkit-transition: all .4s;
-  -moz-transition: all .4s;
-  -o-transition: all .4s;
-  -ms-transition: all .4s;
-  transition: all .4s;
 }
 
-.input-controls {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  width: 105px;
-  height: 100%;
-  background-color: #f8f8f8
-}
-
-.input-controls div {
-  cursor: pointer;
-  display: block;
-  text-align: center;
-  color: #fff;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  vertical-align: middle;
-}
-
-.input-controls div:hover {
-  -webkit-transform: scale(1.05);
-  -moz-transform: scale(1.05);
-  -o-transform: scale(1.05);
-  -ms-transform: scale(1.05);
-  transform: scale(1.05);
-}
-
-.input-controls div:active {
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -o-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
-}
-
-
-.execute-button {
-  margin: 10px auto 0px auto;
-  background-color: #84c7a8;
-  width: 40px;
-  height: 40px;
-}
-
-.execute-button i {
-  line-height: 40px;
-  font-size: 26px;
-  margin-left: 4px;
-}
-
-.directional-controls {
+.top-input-controls {
+  background-color: #fff;
+  border-top: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
+  margin: 0px;
   padding: 0px;
   list-style-type: none;
-  width: 60px;
-  margin: 10px auto;
-  font-size: 16px;
 }
 
-.directional-controls div {
-  width: 25px;
-  height: 25px;
-  background-color: #A5A5A5;
+.top-input-controls li {
+  padding: 0px 10px;
+  margin: 6px 0px;
+  line-height: 16px;
+  cursor: pointer;
 }
 
-.directional-controls div.disabled {
-  background-color: #DBDBDB;
+.top-input-controls li:not(:first-child) {
+  border-left: 1px solid #e7e7e7;
 }
 
-.directional-controls i {
-  line-height: 24px;
+.top-input-controls li:hover {
+  background-color: #e7e7e7;
 }
 
-.directional-controls li {
-  display: inline-block;
+.execute {
+  float: left;
+}
+
+.clear {
+  float: left;
+}
+
+.empty {
+  float: right;
 }
 
 .query {
@@ -415,19 +329,112 @@ text.emptyMsg {
   border-right: 1px solid #f2f2f2;
 }
 
+.bottom-input-controls {
+  background-color: #fff;
+  border-top: 1px solid #e7e7e7;
+  margin: 0px;
+  padding: 0px;
+  list-style-type: none;
+}
+
+.bottom-control {
+  padding: 6px 10px;
+  line-height: 16px;
+  margin: 0px;
+  cursor: pointer;
+}
+
+.bottom-control:not(:last-child) {
+  border-right: 1px solid #e7e7e7;
+}
+
+.bottom-control:hover {
+  background-color: #e7e7e7;
+}
+
+.history-dropdown {
+  font-size: 13px !important;
+  float: left;
+}
+
+.back {
+  float: left;
+}
+
+.forward {
+  float: left;
+}
+
+.disabled {
+  color: #ccc;
+  cursor: default !important;
+}
+
+.bottom-control.disabled:hover {
+  background-color: #fff !important;
+}
+
+.history-button {
+  text-decoration: none;
+  color: #000;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important;
+}
+
+.history {
+  top: auto !important;
+  bottom: 100%;
+  padding: 0px;
+  border: 1px solid #c9c9c9;
+  border-radius: 0px;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important;
+  font-family: "Menlo","Courier New","Terminal",monospace;
+}
+
+.history li:nth-child(2n) {
+  background-color: #f2f2f2;
+}
+
+.history li:hover {
+  background-color: #E6E6E6;
+}
+
+.history-dropdown.open {
+  background-color: #e7e7e7;
+}
+
+.history-dropdown.disabled .history-button {
+  color: #ccc;
+  cursor: default !important;
+}
+
 /* samples */
 
 .samples {
   top: auto !important;
   bottom: 100%;
   padding: 10px;
+  border: 1px solid #c9c9c9;
+  border-radius: 0px;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important;
 }
 
 .samples-dropdown {
-  position: absolute;
-  left: 10px;
-  top: 5px;
-  font-family: "Helvetica", sans-serif
+  float: right;
+  font-size: 13px !important;
+}
+
+.samples-button {
+  color: #000;
+  text-decoration: none;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important;
 }
 
 .sample {
@@ -439,28 +446,8 @@ text.emptyMsg {
   cursor: pointer;
 }
 
-.samples-button {
-  text-transform: uppercase;
-  background-color: #C2C2C2;
-  text-shadow: 0 1px 1px rgba(0,0,0,0.15);
-  font-size: 12px;
-  border-radius: 3px;
-  padding: 2px 4px;
-  font-weight: bold;
-  line-height: 14px;
-  color: #ffffff;
-  vertical-align: baseline;
-  border: none;
-  text-decoration: none;
-  font-family: "Helvetica", sans-serif;
-}
-
-.samples-button:hover {
-  background-color: #BBBBBB;
-}
-
-.samples-dropdown.open .samples-button {
-  background-color: #9E9E9E;
+.samples-dropdown.open {
+  background-color: #e7e7e7;
 }
 
 .samples-label {
@@ -471,24 +458,20 @@ text.emptyMsg {
 
 /* task */
 
-.task {
-  margin: -2px auto;
-  width: 600px;
-  text-align: center;
-  background-color: rgba(255,255,255,0.5);
-  padding: 10px;
-  border-radius: 3px;
-  color: #3498db;
-  font-weight: bold;
-  font-family: Helvetica;
-
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
-  -moz-box-shadow:    0 1px 2px rgba(0,0,0,0.07);
-  box-shadow:         0 1px 2px rgba(0,0,0,0.07);
+.task-msg {
+  width: 100%;
+  background-color: #BFBFBF;
+  padding: 8px 12px;
+  color: #fff;
+  font-size: 14px;
 }
 
 .not-task {
   position: relative;
+}
+
+.task-msg.successful {
+  background-color: #8DC35D;
 }
 
 
@@ -785,9 +768,9 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 }
 .CodeMirror {
   background-color: transparent;
-  padding: 16px 125px 16px 6px;
+  padding: 16px 16px 16px 6px;
   transist: all;
-  height: 70px !important;
+  height: 85px !important;
 }
 .CodeMirror extend .code-style,
 .CodeMirror pre {
